# artemis

./: .clangd  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  compile_commands.json
artemis/: CMakeLists.txt
artemis/resources/shaders/: forward.slang
artemis/src/artemis/assets/: deferred_queue.cpp  deferred_queue.hpp  resource_library.hpp
artemis/src/artemis/core/: application.cpp  application.hpp  application_context.hpp  application_listener.hpp  log.cpp  log.hpp  transform.hpp  window.cpp  window.hpp
artemis/src/artemis/events/: event.hpp  event_bus.cpp  event_bus.hpp  event_listener.hpp  window_event.hpp
artemis/src/artemis/renderer/: camera.hpp  instancer.cpp  instancer.hpp  mesh.hpp  renderer.cpp  renderer.hpp
artemis/src/artemis/utils/: enum_flags.hpp  io.cpp  io.hpp  logger.cpp  logger.hpp
artemis/src/artemis/vulkan/: buffer.cpp  buffer.hpp  command_buffer.cpp  command_buffer.hpp  descriptor_pool.cpp  descriptor_pool.hpp  descriptor_set.cpp  descriptor_set.hpp  descriptor_set_layout.cpp  descriptor_set_layout.hpp  fence.hpp  index_buffer.cpp  index_buffer.hpp  pipeline.cpp  pipeline.hpp  semaphore.hpp  shader.cpp  shader.hpp  swap_chain.cpp  swap_chain.hpp  uniform_buffer.cpp  uniform_buffer.hpp  vertex_buffer.cpp  vertex_buffer.hpp  vertex_buffer_description.cpp  vertex_buffer_description.hpp  vulkan_context.cpp  vulkan_context.hpp  vulkan_utils.cpp  vulkan_utils.hpp
cmake/: slang.cmake
engine/: CMakeLists.txt
sandbox/: CMakeLists.txt
sandbox/resources/shaders/: triangle.slang
sandbox/src/: log.cpp  log.hpp  main.cpp  sandbox.cpp  sandbox.hpp
tests/: CMakeLists.txt
tests/artemis/: CMakeLists.txt  test_event_bus.cpp  test_instancer.cpp  test_render_triangle.cpp
